--- a/makeMaude/src/Main/Makefile
+++ b/makeMaude/src/Main/Makefile
@@ -230,7 +230,7 @@ CTAGS = ctags
 CVC4_LIB = 
 CXX = g++
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -Wall -O2 -fomit-frame-pointer -fforce-addr -mpreferred-stack-boundary=4 
+CXXFLAGS = -g -Wall -O2 -fopenmp -fomit-frame-pointer -fforce-addr -mpreferred-stack-boundary=4 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
